# osprey

./: .deslop.toml  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  coverage-thresholds.json
.github/workflows/: ci.yml  deploy-pages.yml
benchmarks/: README.md  report.py  run.sh
benchmarks/cases/ackermann/: ackermann.cs  ackermann.dart
benchmarks/results/: raw.jsonl  results.html  results.json
compiler/runtime/: collection_runtime.h  coverage_runtime.c  coverage_runtime_tests.c  effects_runtime.c  fiber_runtime.c  http_runtime_tests.c  http_server_internal.h  http_server_request.c  http_server_request_tests.c  http_server_response.c  http_server_runtime.c  http_server_send_tests.c  http_shared.c  http_shared.h  list_runtime.c  list_tests.c  map_runtime.c  map_runtime_hamt.c  map_runtime_internal.h  map_tests.c  memory_arc.c  memory_arc_tests.c  memory_gc.c  memory_gc_tests.c  memory_hooks.h  memory_pool.h  memory_pool_tests.c  memory_runtime.c  osp_arc_shim.h  profiler_runtime.c  profiler_runtime.h  profiler_runtime_tests.c  profiler_sampler.c  string_runtime.c  string_runtime.h  string_runtime_list.c  string_runtime_tests.c  system_runtime.c  test_http_runtime.sh  test_runtime.c  (+2 more)
crates/: diff_examples.sh
crates/osprey-cli/: Cargo.toml
crates/osprey-cli/src/: fmt.rs  main.rs  project.rs  sandbox.rs  test_cmd.rs  wasm.rs
crates/osprey-cli/tests/: cli_e2e.rs  cross_flavor_equiv.rs  cross_flavor_ir_equiv.rs  examples_compile.rs  project_e2e.rs
crates/osprey-lsp/: Cargo.toml
crates/osprey-lsp/src/: analysis.rs  complete.rs  context.rs  diagnostics.rs  engine.rs  features.rs  hover.rs  keywords.rs  lib.rs  mlrender.rs  model.rs  server.rs  testing.rs  text.rs  wire.rs  workspace.rs
crates/osprey-profiler/: Cargo.toml
crates/osprey-profiler/src/: e2e.rs  lib.rs  model.rs  raw.rs  report.rs  testutil.rs
crates/osprey-profiler/src/export/: cpuprofile.rs  folded.rs  mod.rs  speedscope.rs  summary.rs
crates/osprey-profiler/src/symbolize/: mod.rs  tools.rs
crates/osprey-project/: Cargo.toml
crates/osprey-project/src/: annotation.rs  assemble.rs  collect.rs  collect_support.rs  contract.rs  contribution.rs  imports.rs  lib.rs  manifest.rs  model.rs  name_resolve.rs  opaque.rs  purity.rs  resolve.rs  rewrite.rs  signature_collect.rs  source.rs  span.rs  state.rs  state_support.rs  symbol_rewrite.rs  type_rewrite.rs
crates/osprey-project/tests/: modules.rs  opaque_boundary.rs  state_modules.rs
crates/osprey-project/tests/support/: mod.rs
docs/: multitarget-js-dotnet.md  package-manager-research.md
docs/designs/: blog-image-generation.md
docs/plans/: 0002-codegen-generic-function-values.md  0004-collection-stdlib-completion.md  0005-runtime-result-bridge.md  0007-fiber-select.md  0008-algebraic-effects-resume.md  0010-cross-language-benchmark-suite.md  0011-arc-gc-implementation.md  0013-ml-flavor-frontend.md  0014-modules-and-namespaces.md  0015-generics-and-variance.md  0016-algebraic-effects-and-handlers.md  0018-documentation-comments.md  0019-ml-elegance.md  0020-package-manager.md  README.md
docs/specs/: 0001-Introduction.md  0002-LexicalStructure.md  0003-Syntax.md  0004-TypeSystem.md  0005-FunctionCalls.md  0006-StringInterpolation.md  0007-PatternMatching.md  0008-BlockExpressions.md  0009-BooleanOperations.md  0010-LoopConstructsAndFunctionalIterators.md  0011-LightweightFibersAndConcurrency.md  0012-Built-InFunctions.md  0013-ErrorHandling.md  0014-HTTP.md  0015-WebSockets.md  0016-SecurityAndSandboxing.md  0017-AlgebraicEffects.md  0018-MemoryManagement.md  0019-ForeignFunctionInterface.md  0020-LanguageServerAndEditors.md  0021-Debugger.md  0022-WebAssemblyTarget.md  0023-LanguageFlavors.md  0024-MLFlavorSyntax.md  0025-ModulesAndNamespaces.md  0026-DocumentationComments.md  0027-TestingFramework.md  0028-Profiler.md  0029-PackageManagement.md  0030-PackageRegistryTrustAndDiscovery.md  0031-PackageDomainModel.md  0032-PackageEvidenceAndDiscovery.md  README.md
examples/: README.md
examples/failscompilation/: ffi_capturing_callback.ospo  generic_effect_arg_mismatch.ospo  generic_effect_arg_mismatch.ospo.expectedoutput  generic_effect_variance_position.ospo  generic_effect_variance_position.ospo.expectedoutput  if_without_else.ospo  ml_brace_record_and_question_sigil.ospo  ml_brace_record_and_question_sigil.ospo.expectedoutput  ml_handler_value_not_supported.ospo  ml_handler_value_not_supported.ospo.expectedoutput  ml_layout_inconsistent_indent.ospo  ml_layout_inconsistent_indent.ospo.expectedoutput  ml_match_arm_thin_arrow.ospo  ml_match_arm_thin_arrow.ospo.expectedoutput  ml_unterminated_doc_comment.ospo  ml_unterminated_doc_comment.ospo.expectedoutput  multishot_resume_rejected.ospo  multishot_resume_rejected.ospo.expectedoutput  resume_in_arm_lambda.ospo  unhandled_effect_perform.ospo  variance_covariant_result_payload.ospo  variance_covariant_result_payload.ospo.expectedoutput  variance_in_in_output_position.ospo  variance_in_in_output_position.ospo.expectedoutput  variance_invariant_arg_mismatch.ospo  variance_invariant_arg_mismatch.ospo.expectedoutput  variance_on_fn_type_param.ospo  variance_on_fn_type_param.ospo.expectedoutput  variance_out_in_input_position.ospo  variance_out_in_input_position.ospo.expectedoutput
scripts/: test_profiler.sh
tools/carbon/: README.md  package-lock.json  package.json  render.mjs
tree-sitter-osprey/: grammar.js
tree-sitter-osprey/queries/: folds.scm  highlights.scm  locals.scm
tree-sitter-osprey/src/: grammar.json  node-types.json  parser.c
vscode-extension/: .vscode-test.js  README.md  language-configuration-ml.json  package.json
vscode-extension/snippets/: osprey-ml.json  osprey.json
vscode-extension/syntaxes/: osprey-ml.tmLanguage.json  osprey.tmGrammar.json
webcompiler/src/: server.js
website/: .eleventyignore  .gitignore  eleventy.config.mjs  package-lock.json  package.json
website/scripts/: copy-mermaid.js  copy-spec.js  generate-docs.sh
website/src/: CNAME  about.html  benchmarks.md  index.html  status.md
website/tests/: helpers.js  interactions.spec.js
(+308 files in other folders)
