[package]
name = "osprey-cli"
description = "The Osprey compiler command-line front end"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "osprey"
path = "src/main.rs"

[dependencies]
osprey-ast = { workspace = true }
osprey-debug = { workspace = true }
osprey-syntax = { workspace = true }
osprey-project = { workspace = true }
osprey-types = { workspace = true }
osprey-codegen = { workspace = true }
osprey-fmt = { workspace = true }
osprey-lsp = { workspace = true }
osprey-profiler = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
