[package]
name = "osprey-lsp"
description = "The Osprey language server, built on the published lspkit crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
osprey-ast = { workspace = true }
osprey-syntax = { workspace = true }
osprey-types = { workspace = true }
osprey-fmt = { workspace = true }
osprey-project = { workspace = true }

# Reused lspkit building blocks (published on crates.io). [LSP-REUSE-LSPKIT]
lspkit = { workspace = true }
lspkit-server = { workspace = true }
lspkit-vfs = { workspace = true }
lspkit-live = { workspace = true }

tokio = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
