[package]
name = "osprey-profiler"
description = "Offline post-processing for Osprey's sampling CPU profiler — symbolization, aggregation, exports, and the terminal report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
